--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.7",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "googleapis": "^133.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sentiment": "^5.0.2"
