--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "firebase-admin": "^12.0.0",
     "googleapis": "^133.0.0",
     "mongoose": "^8.2.2",
     "qrcode.react": "^3.1.0",
