--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-qr-code": "^2.0.12",
     "react-router-dom": "^6.22.0",
     "sentiment": "^5.0.2"
   },
